--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,9 @@
     <style name="Base.Theme.MoviesApi" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-    </style>
+    </style><style name="ToolbarTheme" parent="ThemeOverlay.MaterialComponents.ActionBar">
+    <item name="android:textColorPrimary">@android:color/white</item>
+    <item name="android:textColorSecondary">#EEEEEE</item>
+</style>
+
 </resources>
